# Volume-Splatting

./: CMakeLists.txt  README.md
cmake/: FindIMGUIFILE.cmake
shaders/: splat.frag.glsl  splat.geom.glsl  splat.vert.glsl
src/: CameraControls.cpp  CameraControls.hpp  GUI.cpp  GUI.hpp  ITKReader.cpp  ITKReader.hpp  kernel.cu  kernel.h  main.cpp  main.hpp
src/ITK/: README.md
src/ITK/include/ITK-5.1/: gdcmConfigure.h  itkConfigure.h  itk_eigen.h  vcl_where_root_dir.h
src/ITK/lib/: ITKBiasCorrection-5.1.lib  ITKColormap-5.1.lib  ITKConvolution-5.1.lib  ITKDICOMParser-5.1.lib  ITKDeformableMesh-5.1.lib  ITKDenoising-5.1.lib  ITKDiffusionTensorImage-5.1.lib  ITKEXPAT-5.1.lib  ITKFFT-5.1.lib  ITKFastMarching-5.1.lib  ITKIOBMP-5.1.lib  ITKIOBioRad-5.1.lib  ITKIOBruker-5.1.lib  ITKIOCSV-5.1.lib  ITKIOGDCM-5.1.lib  ITKIOGE-5.1.lib  ITKIOGIPL-5.1.lib  ITKIOHDF5-5.1.lib  ITKIOIPL-5.1.lib  ITKIOImageBase-5.1.lib  ITKIOJPEG-5.1.lib  ITKIOJPEG2000-5.1.lib  ITKIOLSM-5.1.lib  ITKIOMINC-5.1.lib  ITKIOMRC-5.1.lib  ITKIOMeshBYU-5.1.lib  ITKIOMeshBase-5.1.lib  ITKIOMeshFreeSurfer-5.1.lib  ITKIOMeshGifti-5.1.lib  ITKIOMeshOBJ-5.1.lib  ITKIOMeshOFF-5.1.lib  ITKIOMeshVTK-5.1.lib  ITKIOMeta-5.1.lib  ITKIONIFTI-5.1.lib  ITKIONRRD-5.1.lib  ITKIOPNG-5.1.lib  ITKIOSiemens-5.1.lib  ITKIOSpatialObjects-5.1.lib  ITKIOStimulate-5.1.lib  ITKIOTIFF-5.1.lib  (+59 more)
src/ITK/lib-debug/: ITKBiasCorrection-5.1.lib  ITKColormap-5.1.lib  ITKConvolution-5.1.lib  ITKDeformableMesh-5.1.lib  ITKDenoising-5.1.lib  ITKDiffusionTensorImage-5.1.lib  ITKEXPAT-5.1.lib  ITKFFT-5.1.lib  ITKFastMarching-5.1.lib  ITKIOBMP-5.1.lib  ITKIOBioRad-5.1.lib  ITKIOBruker-5.1.lib  ITKIOCSV-5.1.lib  ITKIOGE-5.1.lib  ITKIOGIPL-5.1.lib  ITKIOIPL-5.1.lib  ITKIOJPEG-5.1.lib  ITKIOJPEG2000-5.1.lib  ITKIOLSM-5.1.lib  ITKIOMINC-5.1.lib  ITKIOMRC-5.1.lib  ITKIOMeshBYU-5.1.lib  ITKIOMeshBase-5.1.lib  ITKIOMeshFreeSurfer-5.1.lib  ITKIOMeshGifti-5.1.lib  ITKIOMeshOBJ-5.1.lib  ITKIOMeshOFF-5.1.lib  ITKIOMeta-5.1.lib  ITKIONIFTI-5.1.lib  ITKIONRRD-5.1.lib  ITKIOPNG-5.1.lib  ITKIOSiemens-5.1.lib  ITKIOStimulate-5.1.lib  ITKIOTIFF-5.1.lib  ITKIOTransformHDF5-5.1.lib  ITKIOTransformInsightLegacy-5.1.lib  ITKIOTransformMatlab-5.1.lib  ITKIOVTK-5.1.lib  ITKImageFeature-5.1.lib  ITKImageIntensity-5.1.lib  (+39 more)
src/ITK/lib-debug/cmake/: UseitkLIBMINC.cmake  itkLIBMINCConfig.cmake
src/ITK/lib-debug/cmake/ITK-5.1/: ITKDEBUGConfig.cmake  ITKModuleAPI.cmake  ITKTargets-debug.cmake  ITKTargets.cmake  UseITK.cmake
src/ITK/lib-debug/cmake/ITK-5.1/Modules/: Eigen3Targets.cmake  ITKEigen3.cmake  ITKInternalEigen3Targets.cmake
src/ITK/lib/cmake/ITK-5.1/: ITKConfig.cmake  ITKConfigVersion.cmake  ITKTargets.cmake
src/ImGuiFileDialog/ImGuiFileDialog/: ImGuiFileDialog.cpp  ImGuiFileDialog.h
src/imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.h
